# vid2depth_tf2

./: README.md  inference.py  model.py  nets.py  project.py  reader.py  run_vid2depth.ipynb  train.py  util.py
dataset/.ipynb_checkpoints/: dataset_loader-checkpoint.py  gen_data-checkpoint.py
ops/: CMakeLists.txt  icp_op.py  icp_op_kernel.cc  icp_test.py  icp_train_demo.py  icp_util.py
